adapt command line options, fix localDns resolver